[新增功能](master): 修改 footer.toml

--- a/bjca/separation/public/pages/footer.tmpl
+++ b/bjca/separation/public/pages/footer.tmpl
@@ -1,12 +1,9 @@
 {{define "footer"}}
     <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-            <b>Version</b> {{.System.Version}}
-        </div>
-        <div class="pull-right hidden-xs">
-            <b>Theme</b> {{.System.Theme}}&nbsp;&nbsp;
-        </div>
-        <strong>Powered by <a href="https://github.com/gomarks/go-admin">GoAdmin</a>.</strong>
-        {{.FooterInfo}}
+        <center>
+            <strong><a href="https://www.bjca.cn/">©2021 北京数字认证股份有限公司</a></strong>
+                        {{.FooterInfo}}
+        </center>
+
     </footer>
 {{end}}
